<resources>
    <string name="app_name">Mintly</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="three_dash">---</string>
    <string name="quiz_cat">Quiz Categories</string>
    <string name="tos_link_1">By using Mintly app, you are agree to our</string>
    <string name="tos_link_2">Terms of Service</string>
    <string name="activity_reward">Activity reward</string>
    <string name="no_message">No message to show.</string>
    <string name="games_1">Play for ranking and highest reward</string>
    <string name="games_2">Play for reward only</string>
    <string name="games_3">More play, better reward</string>
    <string name="open_url_with">Open URL with:</string>
    <string name="webview_name">Internal Browser</string>
    <string name="class_not_found">Class not found!</string>
    <string name="ad_not_available">Ad not available</string>
    <string name="yt_player_not_ready">Please wait till it finishes loading.</string>
    <string name="yt_playing_wait">Please wait until current video is ended.</string>
    <string name="premium_offers">Premium offers</string>
    <string name="question">Question</string>
    <string name="want_continue">Do you want to continue?</string>
    <string name="quiz_yes">Yes, deduct the amount</string>
    <string name="quiz_no">No, leave me out</string>
    <string name="exceed_daily_limit">Daily limit exceeded!</string>
    <string name="per_set">Per set:</string>
    <string name="round_cost">Round cost:</string>
    <string name="today_left">Today left:</string>
    <string name="free_play">Play for free!</string>
    <string name="invalid_category_selected">Invalid category selected!</string>
    <string name="use_grace">Use Grace</string>
    <string name="new_round">New Round</string>
    <string name="fifty_fifty">50/50</string>
    <string name="skip">Skip</string>
    <string name="correct">Correct</string>
    <string name="well_done">Well done!</string>
    <string name="quiz_correct_popup">The answer was correct. You have increased your score. Keep trying to rank up&#8230;</string>
    <string name="next_question">Next question</string>
    <string name="no_grace">No grace!</string>
    <string name="no_grace_desc">Your grace is empty! Want to purchase a new round for</string>
    <string name="purchase_round">Purchase round</string>
    <string name="not_in_question">You are not in a question.</string>
    <string name="quit">Quit</string>
    <string name="your_current_score">Your current score:</string>
    <string name="rank_prefix">You are in position</string>
    <string name="rank_suffix">in current leaderboard ranking.</string>
    <string name="scratch_cards">Scratch Cards</string>
    <string name="word_guessing">Word Guessing</string>
    <string name="not_in_game">You are not in a game!</string>
    <string name="wrong_gw">Wrong! retry chance deducted.</string>
    <string name="hint_no_chance">You do not have any hint chance. Consider purchasing hint chances or try again tomorrow!</string>
    <string name="score">Score</string>
    <string name="spend">Spend</string>
    <string name="to_solve_it">to solve it</string>
    <string name="gw_hints">Avl Hints</string>
    <string name="gw_retry">Avl Retry</string>
    <string name="yes">Yes</string>
    <string name="timeup">Time up!</string>
    <string name="timeup_desc">Time is up, you failed to solve this puzzle within given time. Want to try another puzzle?</string>
    <string name="back">Back</string>
    <string name="imagepuzzle">Image Puzzle</string>
    <string name="ip_finished">Click here when you solve this</string>
    <string name="ip_not_solved">Yet to solve this puzzle. Keep trying&#8230;</string>
    <string name="try_another_round">Try another round</string>
    <string name="ip_cat">Image Puzzle Categories</string>
    <string name="ip_score">Your current score:</string>
    <string name="ip_next">Next Puzzle</string>
    <string name="ip_congrats">You successfully solved this image puzzle. You increased your ranking score. Keep trying to rank up&#8230;</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="close_diag_desc">You did not finish this yet. If you quit now still the fee will be deducted from your balance.</string>
    <string name="close_diag_desc2">Do you want to opt out from this game? You may not be able to resume the game later as a result you should start from begin.</string>
    <string name="close_diag_desc_v">Video is still playing. If you quit now you will not get rewarded. Do you still want to quit?</string>
    <string name="jpz">Jigsaw Puzzle</string>
    <string name="jpz_cat">Jigsaw Puzzle Categories</string>
    <string name="jpz_btn_pre">Help to set a piece for</string>
    <string name="try_another_round_for">Try another round for</string>
    <string name="low_bal_title">Not enough</string>
    <string name="low_bal_desc_prefix">You are running out of</string>
    <string name="low_bal_desc_suffix">Want to complete some tasks to get </string>
    <string name="earn">Earn</string>
    <string name="exit_window">Exit the process</string>
    <string name="retry">Retry</string>
    <string name="connection_error">Connection error!</string>
    <string name="connection_error_desc">Could not connect to the server. Click on retry button to try again.</string>
    <string name="unsupported_device_desc">We do not support this device. For more information please contact us.</string>
    <string name="user_banned">User banned!</string>
    <string name="enroll_now">Enroll Now</string>
    <string name="enrolled">Enrolled</string>
    <string name="enrolled_already">Already enrolled! Nothing deducted from your balance.</string>
    <string name="enroll_fee">Enrolment fee:</string>
    <string name="total_prize">Total prizes:</string>
    <string name="lets_start">Let\'s start</string>
    <string name="wait_for_time_to_finish">You chose an option. Now wait for until remaining duration.</string>
    <string name="game_tour_info">If you do not answer within the given time then time will be deducted from your next question.</string>
    <string name="got_it">Got it</string>
    <string name="result_pub_on">Result will be published on:</string>
    <string name="result_published">Result has been announced!</string>
    <string name="click_check">Click here to check</string>
    <string name="tour_result">Tournament Result</string>
    <string name="game_tour_quit_desc">Your answer will remain answered if you leave now. Do you want to quit?</string>
    <string name="name">Name</string>
    <string name="marks">Marks</string>
    <string name="reward">Reward</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forget_password_ask">Forget Password?</string>
    <string name="retrieve_password">Retrieve Password</string>
    <string name="account_login">Account Log in</string>
    <string name="retrieve">Retrieve</string>
    <string name="email_address">Email address</string>
    <string name="reg_name">Your name</string>
    <string name="reg_email">Email address</string>
    <string name="reg_pass">Password</string>
    <string name="reg_pass_confirm">Password again</string>
    <string name="reg_ref_code">Referral code (if any)</string>
    <string name="pass_not_match">Password did not match!</string>
    <string name="invalid_ref_code">Invalid referral code!</string>
    <string name="winner">Winner</string>
    <string name="you_pos_prefix">You are in position of</string>
    <string name="you_pos_suffix">by current ranking.</string>
    <string name="no_more_rank">No more additional ranks.</string>
    <string name="login_error">Login error:</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="earn_coins">Earn Coins</string>
    <string name="gift_items">Gift Items</string>
    <string name="support">Support</string>
    <string name="close_app">Close the app</string>
    <string name="profile">Profile</string>
    <string name="leaderboard_desc">This leaderboard system is based on previous day\'s activities. This is not Tournament ranking.</string>
    <string name="list_is_empty">List is empty.</string>
    <string name="offers">Offers</string>
    <string name="gift_select_type">Select your gift item type:</string>
    <string name="gift_select_amount">Select the correct amount from below:</string>
    <string name="request_this_item">Request this item</string>
    <string name="write_here">Write here&#8230;</string>
    <string name="insufficient_balance">Insufficient balance!</string>
    <string name="your_country">Your country:</string>
    <string name="profile_data">Profile data</string>
    <string name="invitation_code">Invitation code</string>
    <string name="enter_invitation_code">Enter invitation code</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="enter_avatar_url">Enter your avatar url:</string>
    <string name="change_name">Change Name</string>
    <string name="enter_name">Enter your name</string>
    <string name="ref_code_copied">Referral code copied to clipboard</string>
    <string name="ref_link_copied">Referral link copied to clipboard</string>
    <string name="receive_push_message">Receive push message</string>
    <string name="personalized_message">Personalized message</string>
    <string name="global_notification">Global notification</string>
    <string name="notifications">Notifications</string>
    <string name="caching">Caching</string>
    <string name="clear_session_cache">Clear session cache</string>
    <string name="clear_login_data">Clear login data</string>
    <string name="app_ver">App version</string>
    <string name="session_cleared">Session cache cleared.</string>
    <string name="msg_short">Message is too short.</string>
    <string name="hello">Hello</string>
    <string name="support_welcome">Welcome to the support service. You can write us by using this chat box. One of our support agents will reach you shortly.</string>
    <string name="api_offerwalls">API Offerwalls</string>
    <string name="sdk_offerwalls">SDK Offerwalls</string>
    <string name="video_offers">Video Offers</string>
    <string name="faq">F.A.Q.</string>
    <string name="outdated_version">Outdated Version</string>
    <string name="outdated_version_desc">You can download latest version of this app from Google PlayStore.</string>
    <string name="go_to_ps">Go to PlayStore</string>
    <string name="continu">Continue</string>
    <string name="try_tomorrow">Daily playing limit exceeded. Try again tomorrow.</string>
    <string name="you_won">You won</string>
    <string name="available_chances">Available chances:</string>
    <string name="no_more_chance">No more chance left for today. Try again tomorrow.</string>
    <string name="please_wait">Please wait…</string>
    <string name="game_list">Game List</string>
    <string name="faqs">Frequently Asked Questions</string>
    <string name="search_hint">Search in FAQ…</string>
    <string name="invite">Invite</string>
    <string name="referral_system">Referral System</string>
    <string name="ref_link_not_ready">Referral link is not ready yet!</string>
    <string name="web_offerwall">Web Offerwall</string>
    <string name="accept">I accept</string>
    <string name="layer_type">Layer Type</string>
    <string name="software">Software</string>
    <string name="hardware">Hardware</string>
    <string name="select_language">Select your language</string>
    <string name="cancl">Cancel</string>
    <string name="enter_new_pass">New password</string>
    <string name="enter_new_pass_confirm">Confirm new password</string>
    <string name="enter_current_pass">Enter current password</string>
    <string name="change">Change</string>
</resources>