<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/login_grad"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/account_login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_login_errorView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/red_2"
            android:textSize="14sp"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/reg_email"
            android:textColor="@color/white_aa"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/dialog_login_emailView"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rc_input"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/dialog_login_passView"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/reg_pass"
            android:textColor="@color/white_aa"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/dialog_login_passView"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rc_input"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/dialog_login_submit"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_login_cancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/cancl" />

            <Button
                android:id="@+id/dialog_login_submit"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/login"
                android:textColor="@color/white"
                app:backgroundTint="@color/green_2" />
        </LinearLayout>

        <TextView
            android:id="@+id/dialog_login_fpassView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/forget_password_ask"
            android:textColor="@color/gray"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>