<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="15dp"
        android:background="@drawable/rc_white"
        android:orientation="vertical"
        android:padding="15sp">

        <TextView
            android:id="@+id/dialog_profile_titleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/enter_new_pass"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            android:text="@string/enter_current_pass" />

        <EditText
            android:id="@+id/dialog_change_pass_currEdit"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_margin="4dp"
            android:background="@drawable/rc_input"
            android:inputType="text"
            android:lines="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/enter_new_pass_confirm" />

        <EditText
            android:id="@+id/dialog_change_pass_newEdit"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_margin="4dp"
            android:background="@drawable/rc_input"
            android:inputType="text"
            android:lines="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/dialog_change_pass_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancl"
                android:textColor="@color/white"
                app:backgroundTint="@color/gray_2" />

            <Button
                android:id="@+id/dialog_change_pass_update"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/change"
                android:textColor="@color/white"
                app:backgroundTint="@color/blue_2" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>