<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="25dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/retrieve_password"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_retrieve_errorView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/red_2"
            android:textSize="14sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/dialog_retrieve_emailView"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rc_input"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingStart="5dp"
            android:paddingEnd="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialog_retrieve_cancel"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/cancl" />

            <Button
                android:id="@+id/dialog_retrieve_submit"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/retrieve"
                android:textColor="@color/white"
                app:backgroundTint="@color/blue_3" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>